text alignment on homepage fixed

--- a/public/style.css
+++ b/public/style.css
@@ -196,7 +196,7 @@ section.header {
 section.header h2 {
 	grid-area: head; 
 	font-size: 2.5rem; 
-	text-align: center; 
+	text-align: left; 
 	vertical-align: middle; 
 	padding-left: 1.5rem; 
 	padding-right: 1.5rem;
